--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -87,6 +87,10 @@ Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo 
 Am Abend ergießt sich Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen – um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt. </p>
 </div>
 
+<div class="adsense-ad-block">
+    <p>Google AdSense Ad (End of Article)</p>
+</div>
+
 <div class="article-actions">
     <a href="../index.html" role="button" style="font-weight: 400;">Start page</a>
     <a href="../comments.html" role="button" style="font-weight: 400;">Comment</a>
