--- a/fin.html
+++ b/fin.html
@@ -82,6 +82,9 @@
 (Złoto jest suwerenem wszystkich suwerenów.)
 &ndash; Demokryt</p> 
                 <div class="article-body"> 
+                    <div class="ads google">
+                        <p>Google AdSense Ad 1</p>
+                    </div>
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">W roku 1971 prezydent Nixon ogłosił zamknięcie złotego okna. Światowy system finansowy &ndash; do tej pory oparty na międzynarodowej wymienialności dolara na złoto &ndash; został definitywnie porzucony. W jednej chwili zakończyła się epoka powiązania waluty z realnym zasobem. Rozpoczęła się era fiat &ndash; pieniądza bez pokrycia, emitowanego w dowolnej ilości przez banki centralne.</p> 
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">Po ponad pięćdziesięciu latach, złoto znów wraca na światową scenę jako aktywo strategiczne, nie jako ozdoba muzeum. Wzrost jego ceny, który obecnie przekracza 2500 dolarów za uncję, nie jest kaprysem rynku ani skutkiem chwilowego kryzysu. To manifestacja głębokiego niepokoju wobec kondycji współczesnych finansów.</p> 
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">I. Krótkie przypomnienie: złoto jako pieniądz
@@ -94,6 +97,9 @@ Od 2020 roku cena złota rośnie skokowo &ndash; nie tylko w dolarze, ale we wsz
 3.	Zakupy banków centralnych &ndash; szczególnie Chin, Indii, Rosji i Turcji &ndash; które w skali niespotykanej od lat 70. gromadzą złoto jako zabezpieczenie rezerw.
 4.	Geopolityka &ndash; dedolaryzacja, sankcje, konfiskaty rezerw (jak rosyjskich w 2022) skłaniają wiele krajów do szukania &bdquo;apolitycznego pieniądza&rdquo;.
 Złoto &ndash; jako aktywo, którego nie można &bdquo;drukować&rdquo; i którego nie można łatwo zablokować &ndash; odzyskuje znaczenie nie tylko jako inwestycja, ale jako strategiczny składnik suwerenności monetarnej.</p>
+                    <div class="ads google">
+                        <p>Google AdSense Ad 2</p>
+                    </div>
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">III. Ekonomia post-złota &ndash; czyli Babilon z derywatów
 Ferdinand Lips ostrzegał: wojna z pieniądzem opartym na złocie to wojna z zasadą odpowiedzialności. System fiat opiera się na wierze, że rządy i banki centralne będą &bdquo;rozsądne&rdquo;. Ale historia ostatnich dekad to historia nieustannych:
 &bull;	interwencji,
@@ -134,6 +140,9 @@ Tu obowiązuje prosta zasada:
 &bull;	Jeśli sprzedasz złoto po 6 miesiącach od zakupu &ndash; nie płacisz podatku PIT.
 &bull;	Jeśli sprzedasz przed upływem 6 miesięcy &ndash; powinieneś wykazać zysk w PIT i zapłacić podatek (12% lub 32%, w zależności od dochodów).
 Nie ma tu żadnych &bdquo;furtki&rdquo; ani pułapek &ndash; ale warto przechowywać dowód zakupu (faktura lub potwierdzenie przelewu), by w razie potrzeby udowodnić datę nabycia i cenę.</p>
+                    <div class="ads google">
+                        <p>Google AdSense Ad 3</p>
+                    </div>
                     <p style="font-family: 'Merriweather', serif; font-size: 16px;">Wnioski dla inwestora:
 Złoto inwestycyjne to nadal najczystsza, najprostsza i najbardziej suwerenna forma oszczędności:
 &bull;	Nie jest opodatkowane przy zakupie.
