--- a/kartka.html
+++ b/kartka.html
@@ -25,19 +25,19 @@
         </header>
         <nav class="main-nav">
             <ul>
-                <li> <a href="stand.html">STANDPUNKT</a>
+                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html">PRAWO</a>
+                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html">LOKALNIE</a>
+                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a>
                 </li>
             </ul>
         </nav>
@@ -72,7 +72,7 @@
         <div class="main-layout-wrapper">
             <div class="main-content">
                 <div class="ads google article-top-ad">
-</div>
+                    </div>
                 <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Jak powstało Trójmiasto.</h1>
                 <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Jak narodziła się idea Trójmiasta ? Pomysł połączenia trzech nadmorskich miast pojawił się tuż po II wojnie światowej kiedy odbudowa regionu wymagała zintegrowanego podejścia.</p>
                 <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
