--- a/lokalnie.html
+++ b/lokalnie.html
@@ -73,9 +73,9 @@
         <div class="main-layout-wrapper">
             <div class="main-content">
                 <div class="ads google article-top-ad">
-</div>
+                    </div>
                 <h1 class="article-title" style="">Festiwal Kina Plenerowego w Sopocie – morze, ekran i leżaki.</h1>
-                <p class="lead" style="">W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciół Sopotu zamienia się w coś więcej niż deptak – w kino pod gołym niebem.</p>
+                <p class="lead" style="">W letnie wieczory, kiedy molo pustoszeje z dziennych turystów, a fale zaczynają mówić ciszej, Plac Przyjaciót Sopotu zamienia się w coś więcej niż deptak – w kino pod gołym niebem.</p>
                 <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
                 <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/fb2PKfyt/kino809535.jpg?text=Duży+Obraz+Artykułu"/>
                 <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
