--- a/pixel.html
+++ b/pixel.html
@@ -101,6 +101,10 @@ To nie jest tylko odtwarzacz dźwięku; to most między wczoraj a dziś. Pozwala
 To radio jest dla tych, którzy pamiętają czasy tranzystorów, a jednocześnie z otwartymi ramionami witają cyfrową erę. Dla tych, którzy w dźwięku szukają nie tylko informacji, ale i ukojenia, inspiracji, podróży w czasie i przestrzeni. DTR6000.OAK to więcej niż sprzęt; to towarzysz, który pozwala nam odnaleźć się w zmieniającym się świecie, przypominając o korzeniach i otwierając na to, co nowe. Stoi na przecięciu tradycji i przyszłości, niczym Gdański Kronograf, który z namysłem spogląda w przeszłość, by lepiej zrozumieć teraźniejszość.</p>
 </div>
 
+<div class="adsense-ad-block">
+    <p>Google AdSense Ad (End of Article)</p>
+</div>
+
 <div class="article-actions">
     <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
     <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
