--- a/stand_old.html
+++ b/stand_old.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" style="">
+<html lang="pl">
     <head>
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -21,42 +21,43 @@
                 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
-            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+            </button><a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
         </header>
         <nav class="main-nav">
             <ul>
-                <li> <a href="stand.html" style="">STANDPUNKT</a>
+                <li><a href="stand.html">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html" style="">PRAWO</a>
+                <li><a href="prawo.html">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html" style="font-weight: wght@400; 700; ">LOKALNIE</a>
+                <li><a href="lokalnie.html">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
+                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html" style="">OBYWATELE NIE PL</a>
+                <li><a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html" style="">KARTKA Z HISTORII</a>
+                <li><a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
+                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
             </ul>
         </nav>
         <div id="menu-overlay"></div>
         <div id="offcanvas-menu">
             <ul>
-                <li> <a href="stand.html">STANDPUNKT</a>
+                <li><a href="stand.html">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html">PRAWO</a>
+                <li><a href="prawo.html">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html">LOKALNIE</a>
+                <li><a href="lokalnie.html">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li><a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li><a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li><a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a></li>
+                <li><a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                </li>
                 <li><a href="lm.html">LUMEN MUNDI</a></li>
                 <li><a href="west.html">Z ZACHODU</a></li>
                 <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
@@ -72,45 +73,50 @@
         <div class="main-layout-wrapper">
             <div class="main-content">
                 <div class="ads google article-top-ad">
-                    </div>
-                <h1 class="article-title" style="">Kaszubska jednodniówka – smak, widok, powietrze.</h1>
-                <p class="lead" style="">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego.</p>
-                <p class="author-date">Autor: Jan Kowalski | Data publikacji: 26 lipca 2025</p>
-                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/Gm3z5TZk/kaszuby-szymbark-810535.jpg?text=Duży+Obraz+Artykułu"/>
-                <p class="image-caption">To jest podpis pod obrazem, krótki i opisowy.</p>
-                <div class="article-body">
-                    <p style="">Są takie dni w środku sezonu, kiedy trzeba uciec z linii frontu turystycznego. Zostawić Długi Targ, Molo i kolejki do zapiekanek – i pojechać w głąb. Proponujemy: jednodniowy wypad na Kaszuby. Bez wielkich walizek, bez bookingów, tylko z plecakiem, mapą i głodem. Start: Gdańsk Zachodni (przystanek Łostowice Świętokrzyska).    Autobus w kierunku Kościerzyny, najlepiej wsiąść ok. 7:30. Wysiąść w Szymbarku lub Gołubiu.</p>
-                    <p>Wieża Widokowa na Wieżycy.
-   Wędrówka przez las zajmie niecałą godzinę. Na górze – stalowa konstrukcja z panoramą całych Kaszub. Przy dobrej pogodzie widać nawet wieżowce Gdańska.</p>
-                    <p> Obiad: Zajazd „Pod Wieżycą”.
-   Tam nie pytają, czy zupa ma być mała czy duża. Czernina, kiszka ziemniaczana, karkówka w majeranku, do tego kompot z rabarbaru i chleb z domowego wypieku. Płacisz gotówką, ale nie żałujesz.</p>
-                    <p>Popołudnie: Chmielno – ceramika i jezioro.  
-   Przejazd do Chmielna (PKS lub pieszo, jeśli siły pozwolą). W Muzeum Ceramiki Neclów można samodzielnie ulepić filiżankę lub garnek. Po zajęciach – spacer nad Jeziorem Białym.</p>
-                    <p> Kolacja: karczma „Skarbnik” w Kościerzynie.  
-   Prawdziwe kołduny kaszubskie, śledź w śmietanie, pierogi z pokrzywą. Na koniec – nalewka z jeżyn podawana w kieliszku do jajka. Uwaga: nie prowadź po tym.</p>
-                    <p>Powrót.   
-   Ostatni autobus do Gdańska o 20:10 (sprawdź rozkład). Droga powrotna przez pola i światła Trójmiasta – cisza po gwarze.
-Nie trzeba rezerwacji, nie trzeba aplikacji.  
-Wystarczy chcieć oddychać inaczej – i zjeść coś, co nie było zamrożone w styczniu.  </p>
-                    <p> INFORMACJE PRAKTYCZNE
-– Dojazd: z Gdańska Głównego pociągiem SKM lub REGIO do Kościerzyny (ok. 1h 40 min), koszt biletu ok. 15 zł  
-– Alternatywnie: autobus linii PKS przez Żukowo, Szymbark, Gołubie  
-– Wędrówka: na Wieżycę od przystanku to ok. 45 minut piechotą  
-– Obiad: zajazd „Pod Wieżycą” – ceny od 25 zł za danie, płatność gotówką  
-– Ceramika: Muzeum Ceramiki Neclów w Chmielnie – bilet normalny 15 zł, warsztaty od 30 zł  
-– Powrót: ostatni autobus lub pociąg do Gdańska między 20:00 a 21:15 – sprawdź rozkład jazdy
-Taka trasa to nie tylko odpoczynek – to inwestycja w oddech. Bez rezerwacji, bez planu, z poczuciem przestrzeni.
-Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy i Chmielna. Pensjonaty, kwatery agroturystyczne, domki z widokiem – dostępne od ok. 120 zł za noc.</p>
-                </div>
-                
-<div class="article-actions">
-    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
-    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
-    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
-    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
-    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
 </div>
-
+                <h1 class="article-title" style="">Gdański Łabędź, czyli o tych, których już nie liczymy</h1>
+                <p class="lead" style="">W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
+                    Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności  </p>
+                <p class="author-date">Redakcja| Data publikacji: 26 lipca 2025</p>
+                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/qMkJBWh5/sw22.jpg?text=Duży+Obraz+Artykułu"/>
+                <p class="image-caption">The King’s Swan Marker David Barber mit einem seiner Schützlinge Picture Alliance</p>
+                <div class="article-body">
+                    <p style="">W Londynie trwa właśnie Swan Upping – coroczne liczenie łabędzi na Tamizie.
+                        Rytuał z XIII wieku: czerwone mundury, herby na łodziach, królewski gest własności (dziś to Karol III). Ale nie o monarchię chodzi, a o ekologię.
+                        Ptaki są ważone, obrączkowane, opisywane. Dzieci klaszczą. Londyn liczy łabędzie. </p>
+                    <p style="">A w Gdańsku?
+                        Gdańsk kiedyś był inny. Nie tylko miejski, lecz alter miejski. W Stawach Królewskich, tam gdzie woda pachniała historią, łabędzie pływały spokojnie — a obywatele dobrze ubrani kupowali karneczki z datą ważności, by karmić nie chlebem z folii, lecz ziarnem z lnianej torby. Nie sypali jedzenia — składali je u brzegu.
+                        W Gdańsku to łabędzie liczyły ludzi.
+                        Niektórych więcej niż raz – bo przynosili prawdziwe jedzenie.
+                        Nie spleśniały chleb z Biedronki. Nie chipsy w folii.
+                        Przychodzili w deszczu, w grudniowy mróz, bez selfie-sticków, bez relacji live.
+                        Łabędzie znały tych, którzy próbowali chronić Motławę.
+                        Tych, co przeganiali psy.
+                        Tych, co odważyli się przegonić właścicieli psów.
+                        Ale z roku na rok było ich mniej.
+                        Mniej ptaków. Mniej ludzi.
+                        W końcu nie było już na kogo liczyć.
+                        I nie było komu liczyć.</p>
+                    <p style="">Odleciały.
+                        Może do Schwangau, gdzie w herbie łabędź, a na zamku duch Ludwika II.
+                        Może do Brabancji, gdzie grają marsz weselny Wagnera –
+                        którego dziś nie chcą słuchać, bo Wagner nie lubił Parady Równości,
+                        która idzie przez współczesny Gdańsk.
+                        Może do Londynu, by dać się zważyć i wpisać do systemu.
+                        Może do Wolnego Miasta Gdańska – którego już nie ma.
+                        Ale to najdłuższy lot – i podjęli go tylko nieliczni. </p>
+                    <p style=""> Na Dolnym Mieście zostały opakowania po chipsach,
+                        psy z właścicielami, których już nie da się odróżnić – kto pies, kto pan.
+                        Między popękanymi wieżyczkami Śluzy pływają kajaki i puste butelki po energetykach. I nikt już nie mówi: „Tam, przy moście, był łabędź. Duży, biały. Nie bał się ludzi.”</p>
+                </div>
+                <div class="article-actions">
+                    <p><a href="#">[ Read on one page ]</a></p>
+                    <p><a href="#">[ Next article ]</a></p>
+                    <p><a href="#">[ Comment ]</a></p>
+                    <p><a href="#">[ Share ]</a></p>
+                    <p><a href="#">[ Copy link ]</a></p>
+                    <p><a href="#">[ Print PDF ]</a></p>
+                </div>
                 <div class="section-separator"></div>
                 <div class="editorial-info">
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
@@ -166,8 +172,6 @@ Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy 
     if (overlay) {
       overlay.addEventListener('click', toggleMenu);
     }
-
-    // Weather Widget Script - REMOVED AS IT'S NOW IN wetter.html
   </script>
     </body>
 </html>
