--- a/support.html
+++ b/support.html
@@ -90,9 +90,9 @@
 </head>
 <body>
     <div class="support-widget">
-        <a href="support.html" class="vista-button btn-blue">📰 Support free press</a>
-        <a href="subscribe.html" class="vista-button btn-red">✉️ Subscribe</a>
-        <a href="archiwum.html" class="vista-button btn-grey">📁 Archive</a>
+        <a href="freesupport.html" target="_blank" class="vista-button btn-blue">📰 Support free press</a>
+        <a href="subscribe.html" target="_blank" class="vista-button btn-red">✉️ Subscribe</a>
+        <a href="archiwum.html" target="_blank" class="vista-button btn-grey">📁 Archive</a>
     </div>
 
     
