--- a/freesupport.html
+++ b/freesupport.html
@@ -1,12 +1,13 @@
 
 <!DOCTYPE html>
+
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <title>Wspieraj wolne media</title>
-  <link rel="stylesheet" href="css/theme.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
+<meta charset="utf-8"/>
+<title>Wspieraj wolne media</title>
+<link href="css/theme.css" rel="stylesheet"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<style>
     .freesupport-container {
       max-width: 800px;
       margin: 100px auto;
@@ -56,19 +57,19 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Wspieraj wolne media / Support Free Press / Freie Medien unterstützen</h1>
-    </div>
-  </header>
-  <main>
-    <div class="freesupport-container">
-      <div class="support-buttons">
-        <a href="https://buycoffee.to/danziger" target="_blank">☕ Buy Coffee<span>Wesprzyj nas jednorazowo</span></a>
-        <a href="partnerstwo.html" target="_blank">🌍 Bądź partnerem wolnych mediów<span>Sei Partner freier Medien</span></a>
-        <a href="shop.html" target="_blank">🛒 Sklepik Danzigera<span>Online-Shop in Vorbereitung</span></a>
-      </div>
-    </div>
-  </main>
+<header>
+<div class="container">
+<h1>Wspieraj wolne media / Support Free Press / Freie Medien unterstützen</h1>
+</div>
+</header>
+<main>
+<div class="freesupport-container">
+<div class="support-buttons">
+<a href="https://buycoffee.to/danzig" target="_blank">☕ Buy Coffee<span>Wesprzyj nas jednorazowo</span></a>
+<a href="partnerstwo.html" target="_blank">🌍 Bądź partnerem wolnych mediów<span>Sei Partner freier Medien</span></a>
+<a href="shop.html" target="_blank">🛒 Sklepik Danzigera<span>Online-Shop in Vorbereitung</span></a>
+</div>
+</div>
+</main>
 </body>
 </html>
