--- a/support.html
+++ b/support.html
@@ -92,7 +92,7 @@
     <div class="support-widget">
         <a href="freesupport.html" target="_blank" class="vista-button btn-blue">📰 Support free press</a>
         <a href="subscribe.html" target="_blank" class="vista-button btn-red">✉️ Subscribe</a>
-        <a href="archiwum.html" target="_blank" class="vista-button btn-grey">📁 Archive</a>
+        <a href="archiwum/archiwum.html" target="_blank" class="vista-button btn-grey">📁 Archive</a>
     </div>
 
     
