--- a/kontakt.html
+++ b/kontakt.html
@@ -87,7 +87,7 @@
                     </div>
                 <div class="kontakt-container">
                   <h1>Skontaktuj się z nami</h1>
-                  <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                  <form name="contact" method="POST" data-netlify="true" action="/dziekujemy.html" netlify-honeypot="bot-field">
                     <input type="hidden" name="form-name" value="contact">
                     <p style="display:none">
                       <label>Nie wypełniaj: <input name="bot-field"></label>
