--- a/kontakt.html
+++ b/kontakt.html
@@ -72,7 +72,7 @@
 
     document.getElementById('kontakt-form').addEventListener('submit', function(event) {
       event.preventDefault();
-      emailjs.sendForm('service_ihqzngg', 'template_rnoi2ax', this)
+      emailjs.sendForm('service_ihqzngg', 'template_pjtueyg', this)
         .then(function() {
           window.location.href = "/dziekujemy.html";
         }, function(error) {
