--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -101,7 +101,7 @@ Am Abend ergießt sich Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
 
 <div class="section-separator"></div>
 <div class="editorial-info">
-<p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
+<p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="../kontakt.html">Skontaktuj się z nami</a>
 </div>
 </div>
 <div class="vertical-strip"></div>
