--- a/subscribe.html
+++ b/subscribe.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -6,6 +5,12 @@
   <title>Zapisz się na subskrypcję</title>
   <link rel="stylesheet" href="css/theme.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script>
+    (function(){
+      emailjs.init("PGsn7ZkHeptD5mWTv"); // public key
+    })();
+  </script>
   <style>
     .subskrypcja-container {
       max-width: 600px;
@@ -48,11 +53,7 @@
   </header>
   <main>
     <div class="subskrypcja-container">
-      <form name="subscribe" method="POST" data-netlify="true" netlify-honeypot="bot-field">
-        <input type="hidden" name="form-name" value="subscribe">
-        <p style="display:none">
-          <label>Nie wypełniaj: <input name="bot-field"></label>
-        </p>
+      <form id="subscribe-form">
         <p>
           <label>Imię i nazwisko:<br><input type="text" name="name" required></label>
         </p>
@@ -65,5 +66,22 @@
       </form>
     </div>
   </main>
+
+  <script>
+    document.getElementById('subscribe-form').addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      emailjs.send("service_vvvc6l7", "template_subscribe", {
+        name: this.name.value,
+        email: this.email.value
+      }).then(function(response) {
+        console.log("Sukces:", response.status, response.text);
+        window.location.href = "thankyou.html";
+      }, function(error) {
+        console.error("Błąd:", error);
+        alert("Błąd wysyłki. Spróbuj ponownie.");
+      });
+    });
+  </script>
 </body>
 </html>
