--- a/subscribe.html
+++ b/subscribe.html
@@ -1,87 +1,16 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-  <meta charset="UTF-8">
-  <title>Zapisz się na subskrypcję</title>
-  <link rel="stylesheet" href="css/theme.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script>
-    (function(){
-      emailjs.init("PGsn7ZkHeptD5mWTv"); // public key
-    })();
-  </script>
-  <style>
-    .subskrypcja-container {
-      max-width: 600px;
-      margin: 100px auto;
-      padding: 2rem;
-      background-color: #f5f5f5;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    form p {
-      margin-bottom: 1rem;
-    }
-    label {
-      display: block;
-      margin-bottom: 0.5rem;
-      font-weight: bold;
-    }
-    input, textarea, button {
-      width: 100%;
-      padding: 0.6rem;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #333;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #555;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="container">
-      <h1 style="text-align:center;">Zapisz się na subskrypcję</h1>
-    </div>
-  </header>
-  <main>
-    <div class="subskrypcja-container">
-      <form id="subscribe-form">
-        <p>
-          <label>Imię i nazwisko:<br><input type="text" name="name" required></label>
-        </p>
-        <p>
-          <label>Adres e-mail:<br><input type="email" name="email" required></label>
-        </p>
-        <p>
-          <button type="submit">Zapisz mnie</button>
-        </p>
-      </form>
-    </div>
-  </main>
+<script>
+  document.getElementById('subscribe-form').addEventListener('submit', function(event) {
+    event.preventDefault();
 
-  <script>
-    document.getElementById('subscribe-form').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      emailjs.send("service_vvvc6l7", "template_subscribe", {
-        name: this.name.value,
-        email: this.email.value
-      }).then(function(response) {
-        console.log("Sukces:", response.status, response.text);
-        window.location.href = "thankyou.html";
-      }, function(error) {
-        console.error("Błąd:", error);
-        alert("Błąd wysyłki. Spróbuj ponownie.");
-      });
+    emailjs.send("service_vvvc6l7", "template_8i490ih", {
+      name: this.name.value,
+      email: this.email.value
+    }).then(function(response) {
+      console.log("Sukces:", response.status, response.text);
+      window.location.href = "thankyou.html";
+    }, function(error) {
+      console.error("Błąd:", error);
+      alert("Błąd wysyłki. Spróbuj ponownie.");
     });
-  </script>
-</body>
-</html>
+  });
+</script>
