--- a/kontakt.html
+++ b/kontakt.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -72,7 +71,7 @@
 
     document.getElementById('kontakt-form').addEventListener('submit', function(event) {
       event.preventDefault();
-      emailjs.sendForm('service_ihqzngg', 'template_pjtueyg', this)
+      emailjs.sendForm('service_vvvc6l7', 'template_8i490ih', this)
         .then(function() {
           window.location.href = "/dziekujemy.html";
         }, function(error) {
