--- a/subscribe.html
+++ b/subscribe.html
@@ -1,16 +1,84 @@
-<script>
-  document.getElementById('subscribe-form').addEventListener('submit', function(event) {
-    event.preventDefault();
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8">
+  <title>Zapisz się na subskrypcję</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script>
+    (function(){
+      emailjs.init("PGsn7ZkHeptD5mWTv"); // Twój public key
+    })();
+  </script>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      max-width: 600px;
+      margin: 60px auto;
+      padding: 20px;
+      background: #fdfdfd;
+      color: #222;
+    }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin: 20px 0 10px;
+      font-weight: bold;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      font-family: inherit;
+      font-size: 16px;
+      border: 1px solid #ccc;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 30px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      background: #000;
+      color: #fff;
+      border: none;
+    }
+  </style>
+</head>
+<body>
 
-    emailjs.send("service_vvvc6l7", "template_8i490ih", {
-      name: this.name.value,
-      email: this.email.value
-    }).then(function(response) {
-      console.log("Sukces:", response.status, response.text);
-      window.location.href = "thankyou.html";
-    }, function(error) {
-      console.error("Błąd:", error);
-      alert("Błąd wysyłki. Spróbuj ponownie.");
+  <h1>Zapisz się na subskrypcję</h1>
+
+  <form id="subscribe-form">
+    <label>Imię i nazwisko:
+      <input type="text" name="name" required>
+    </label>
+
+    <label>Adres e-mail:
+      <input type="email" name="email" required>
+    </label>
+
+    <button type="submit">Zapisz mnie</button>
+  </form>
+
+  <script>
+    document.getElementById('subscribe-form').addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      emailjs.send("service_vvvc6l7", "template_8i490ih", {
+        name: this.name.value,
+        email: this.email.value
+      }).then(function(response) {
+        console.log("Sukces:", response.status, response.text);
+        window.location.href = "thankyou.html";
+      }, function(error) {
+        console.error("Błąd:", error);
+        alert("Błąd wysyłki. Spróbuj ponownie.");
+      });
     });
-  });
-</script>
+  </script>
+
+</body>
+</html>
