--- a/subscribe.html
+++ b/subscribe.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function(){
-      emailjs.init("PGsn7ZkHeptD5mWTv"); // Twój public key
+      emailjs.init("PGsn7ZkHeptD5mWTv"); // public key
     })();
   </script>
   <style>
@@ -16,12 +16,13 @@
       max-width: 600px;
       margin: 60px auto;
       padding: 20px;
-      background: #fdfdfd;
+      background: #fefefe;
       color: #222;
     }
     h1 {
       font-size: 28px;
       margin-bottom: 20px;
+      text-align: center;
     }
     label {
       display: block;
@@ -72,7 +73,7 @@
         email: this.email.value
       }).then(function(response) {
         console.log("Sukces:", response.status, response.text);
-        window.location.href = "thankyou.html";
+        window.location.href = "dziekujemy.html";
       }, function(error) {
         console.error("Błąd:", error);
         alert("Błąd wysyłki. Spróbuj ponownie.");
