--- a/comments.html
+++ b/comments.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -36,5 +35,17 @@
       <p><strong>DE:</strong> Wir arbeiten an der Möglichkeit, Kommentare in einem offenen Forum zu ermöglichen.</p>
     </div>
   </main>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      // Zmieniona ścieżka do cookiebar.html
+      fetch("/partials/cookiebar.html")
+        .then(res => res.ok ? res.text() : Promise.reject("Błąd ładowania cookiebar"))
+        .then(html => {
+          document.body.insertAdjacentHTML("beforeend", html);
+        })
+        .catch(err => console.error("Nie udało się załadować cookiebar:", err));
+    });
+  </script>
 </body>
 </html>
