--- a/comments.html
+++ b/comments.html
@@ -37,15 +37,18 @@
     </div>
   </main>
 
-  <!-- Cookiebar loader -->
   <script>
-    fetch('/partials/cookiebar.html')
+    fetch('partials/cookiebar.html')
       .then(res => res.text())
       .then(html => {
         document.body.insertAdjacentHTML('beforeend', html);
-        if (typeof initCookieBar === 'function') initCookieBar();
+        const script = document.createElement('script');
+        script.src = 'partials/cookiebar.js';
+        script.onload = () => {
+          if (typeof initCookieBar === 'function') initCookieBar();
+        };
+        document.body.appendChild(script);
       });
   </script>
-  <script src="/partials/cookiebar.js"></script>
 </body>
 </html>
