--- a/fin.html
+++ b/fin.html
@@ -218,5 +218,12 @@ Nie bój się złota. Po prostu zrozum, jak działa.</p>
       overlay.addEventListener('click', toggleMenu);
     }
   </script>         
-    </body>     
+    
+<div id="cookie-bar">
+  <p>Ta strona używa ciasteczek w celach analitycznych.</p>
+  <button id="accept-cookies">Akceptuję</button>
+</div>
+<script src="js/cookie-bar.js"></script>
+
+</body>     
 </html>
