--- a/fin.html
+++ b/fin.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&display=swap"> 
         <link href="css/theme.css" rel="stylesheet" type="text/css"> 
         <link href="css/section.css" rel="stylesheet" type="text/css"> 
+        <link rel="stylesheet" href="css/cookie-bar.css">
     </head>     
     <body> 
         <header> 
@@ -197,6 +198,14 @@ Nie bój się złota. Po prostu zrozum, jak działa.</p>
         </div>         
         <footer> 
 </footer>         
+        <div class="cookie-bar" id="cookie-bar">
+          <p>
+            Ta strona używa plików cookie w celu zapewnienia jak najlepszego komfortu użytkowania.
+            Kontynuując, wyrażasz zgodę na ich użycie.
+          </p>
+          <button id="accept-cookies">Akceptuję</button>
+        </div>
+        <script src="js/cookie-bar.js"></script>
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
@@ -218,12 +227,5 @@ Nie bój się złota. Po prostu zrozum, jak działa.</p>
       overlay.addEventListener('click', toggleMenu);
     }
   </script>         
-    
-<div id="cookie-bar">
-  <p>Ta strona używa ciasteczek w celach analitycznych.</p>
-  <button id="accept-cookies">Akceptuję</button>
-</div>
-<script src="js/cookie-bar.js"></script>
-
-</body>     
+    </body>     
 </html>
