--- a/dobrze.html
+++ b/dobrze.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/> 
         <link href="css/theme.css" rel="stylesheet" type="text/css"/> 
         <link href="css/section.css" rel="stylesheet" type="text/css"/> 
+        <link rel="stylesheet" href="css/cookie-bar.css">
     </head>     
     <body> 
         <header> 
@@ -148,6 +149,14 @@ Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy 
         </div>         
         <footer> 
 </footer>         
+        <div class="cookie-bar" id="cookie-bar">
+          <p>
+            Ta strona używa plików cookie w celu zapewnienia jak najlepszego komfortu użytkowania.
+            Kontynuując, wyrażasz zgodę na ich użycie.
+          </p>
+          <button id="accept-cookies">Akceptuję</button>
+        </div>
+        <script src="js/cookie-bar.js"></script>
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
